--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ packaging==20.9
 pandas==1.2.4
 pluggy==0.13.1
 py==1.10.0
+pyinstaller==4.9
 pyparsing==2.4.7
 pytest==6.2.3
 python-dateutil==2.8.1
@@ -17,3 +18,4 @@ six==1.16.0
 sklearn==0.0
 threadpoolctl==2.1.0
 toml==0.10.2
+tqdm==4.62.3
