--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,8 @@
-attrs==20.3.0
-coverage==5.5
-iniconfig==1.1.1
-joblib==1.0.1
-numpy==1.21
-packaging==20.9
-pandas==1.2.4
-pluggy==0.13.1
-py==1.10.0
-pyparsing==2.4.7
-pytest==6.2.3
-python-dateutil==2.8.1
-pytz==2021.1
-scikit-learn==0.24.2
-scipy==1.6.3
-six==1.16.0
-sklearn==0.0
-threadpoolctl==2.1.0
-toml==0.10.2
-tqdm==4.60.0
+coverage
+numpy
+pandas
+pytest
+scikit-learn
+scipy
+sklearn
+tqdm
